# rnc-utils

./: Cargo.toml  readme.md  shell.nix
active-sequences/: Cargo.toml
active-sequences/src/: container.rs  main.rs  mapping.rs
csv-partition/: Cargo.toml
csv-partition/src/: main.rs
expand-urs/: Cargo.toml
expand-urs/src/: main.rs
json2fasta/: Cargo.toml
json2fasta/src/: main.rs
kv/: Cargo.toml
kv/src/: main.rs  store.rs
kv/tests/: usage_test.rs
nix/: sources.json
pubs/: Cargo.toml
pubs/src/: main.rs  stream_lookup.rs
rnc-core/: Cargo.toml
rnc-core/src/: europe_pmc.rs  json_sequence.rs  lib.rs  psql.rs  publications.rs  urs.rs  urs_store.rs  urs_taxid.rs
rnc-core/src/containers/: urs_taxid.rs
rnc-core/src/publications/: external_reference.rs  reference.rs  reference_type.rs
rnc-test-utils/: Cargo.toml
rnc-utils/src/: lib.rs
search-utils/: Cargo.toml
search-utils/src/: main.rs  traits.rs
search-utils/src/normalize/: mod.rs  utils.rs
search-utils/src/normalize/ds/: accession.rs  basic.rs  cross_reference.rs  crs.rs  entry.rs  feedback.rs  go_annotation.rs  interacting_protein.rs  interacting_rna.rs  mod.rs  precompute.rs  qa_status.rs  r2dt.rs  reference.rs  rfam_hit.rs  so_tree.rs
split-sequences/: Cargo.toml
split-sequences/src/: chunks.rs  limits.rs  main.rs  utils.rs
src/: fst_utils.rs  json_store.rs  main.rs  sequences.rs  utils.rs
src/json_store/: lmdb.rs  mod.rs  sqlite.rs
