[package]
name = "active-sequences"
version = "0.1.0"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
log = "0.4"
bio = "0.32.0"
rnc-utils = { path = "../rnc-utils" }
rnc-core = { path = "../rnc-core" }
fnv = "1.0.3"
