[package]
name = "pubs"
version = "0.1.0"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1"
fallible-iterator = "0.2.0"
fnv = "1.0.3"
log = "0.4"
quick-xml = "0.18.1"
rnc-core = { path = "../rnc-core" }
rnc-utils = { path = "../rnc-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "^0.7.6"
structopt = "0.3"
